--- a/B07Project/app/src/main/AndroidManifest.xml
+++ b/B07Project/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.B07Project"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityOwnerView1"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityShopperView1"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityCreateOwner"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityOwnerSignup"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityCreateShopper"
+            android:exported="false" />
+        <activity
             android:name=".ActivityAccountType"
             android:exported="false" />
         <activity
