--- a/B07Project/local.properties
+++ b/B07Project/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 27 16:19:03 EDT 2023
-sdk.dir=/Users/alysa/Library/Android/sdk
+#Fri Jul 28 14:55:09 EDT 2023
+sdk.dir=C\:\\Users\\danny\\AppData\\Local\\Android\\Sdk
