--- a/B07Project/local.properties
+++ b/B07Project/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jul 28 14:55:09 EDT 2023
-sdk.dir=C:\Users\janan\AppData\Local\Android\Sdk
+#Sat Jul 29 17:12:37 EDT 2023
+sdk.dir=C\:\\Users\\janan\\AppData\\Local\\Android\\Sdk
